--- a/wp-content/themes/Playground/index.html
+++ b/wp-content/themes/Playground/index.html
@@ -100,21 +100,21 @@
                     </form>
                     <div class="contact">
                         <p>
-                            Quisque Hendrerit: purus dapi- bus, ornare nibh vitae, viverra nibh.
+                            Quisque Hendrerit: purus dapibus, ornare nibh vitae, viverra nibh.
                             Fusce vitae aliquam tellus. Proin sit amet volutpat libero. 
                             Nulla sed nunc et tortor luctus faucibus morbi vitae.
                         </p>
                         <ul>
                             <li>
-                                <img src="images/location.png" alt="location">
+                                <img src="image/location.png" alt="location">
                                 Elm St. 14/05 Lost City
                             </li>
                             <li>
-                                <img src="images/phone.png" alt="socials">
+                                <img src="image/phone.png" alt="socials">
                                 + 3528 331 86 35
                             </li>
                             <li>
-                                <img src="images/mail.png" alt="socials">
+                                <img src="image/mail.png" alt="socials">
                                 info@hexalcorp.com
                             </li>
                         </ul>
@@ -122,11 +122,8 @@
                 </div> 
             </div>
             <footer>
-                <div class="footer_center">
-                    <p>
-                        Copyright 2013 by PSDchat
-                    </p>
-                </div>
+
+
             </footer>
         </div>
     </body>
