--- a/wp-content/themes/Playground/index.html
+++ b/wp-content/themes/Playground/index.html
@@ -91,10 +91,10 @@
                 <div class="form-holder">
                     <h1>Get In Touch</h1>
                     <h2>In order to get in touch use the contact form below:</h2>
-                    <form class="conteiner_form">
+                    <form action="/" class="conteiner_form" method="post">
                         <input type="text" name="name" maxlength="35" placeholder="Name(Required)" value=""> 
-                        <input type="text" name="Email" maxlength="35" placeholder="Email(Required)" value="">
-                        <input type="text" name="Subject" maxlength="35" placeholder="Subject" value="">
+                        <input type="text" name="email" maxlength="35" placeholder="Email(Required)" value="">
+                        <input type="text" name="subject" maxlength="35" placeholder="Subject" value="">
                         <textarea rows="10" cols="10" name="text" placeholder="Write you message here..."></textarea> 
                         <input type="submit" value="SEND">
                     </form>
